# ZohoSP

./: Fin Abs.docx  IIA Intern Certificate.pptx  Radio Interferometry.pptx  To.docx  resume 1.pptx  resume 2.pptx
.metadata/: .lock_info  version.ini
Arduino/libraries/TcMenuLog/cmake/: CMakeLists.txt
BrickBreaker/src/: module-info.java
Flight Seat Booking/: .project
Flight Seat Booking/src/: module-info.java
Flight Ticket Booking/: .project
Flight Ticket Booking/src/: module-info.java
HTML/: Signup.html
HTML/CSS/: index.html
HTML/Portfolio/: Index.html  Pet.html  script.js
HTML/Power House/: Dashboard.html  Home.html  Loading.html
Mailmanagement/: .project
Mailmanagement/src/: module-info.java
Mazerunner/: .project
Mazerunner/src/: module-info.java
Placement/.metadata/: .lock_info  version.ini
Placement/Moveball/: .project
Problems/Larposnumarrr/: .project
Problems/larposnumarr/: .project
Pyhton/Problems/: Addwoop.py  Asciichar.py  Axis.py  Binarysearch.py  Bookshelfsfilled.py  Bubblesort.py  Checkexistfibseries.py  Climbingstairs.py  Codevalidate.py  Condsubarr.py  Countsubsets.py  Daysbet.py  Decodestr.py  Energylev.py  Evenlenstr.py  Firstwrrep.py  Freqlist.py  Freqofocconce.py  Hammingdist.py  HappyNumber.py  Houserobber.py  Insertionsort.py  Kadensalgo.py  LFUcache.py  LRUCache.py  Larposnumfromarr.py  Leaderele.py  Liftweight.py  Longstr.py  Mariatech.py  MaxXor.py  Mergsort.py  Missingnum.py  (+24 more)
Railway Reservation/: .project
Taxi Booking/: .project
Tollmanagement/: .project
XO game/: .project
student management/: .project
(+311 files in other folders)
